; ModuleID = '/home/carl/AnghaBench/FFmpeg/doc/examples/extr_avio_dir_cmd.c_del_op.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/doc/examples/extr_avio_dir_cmd.c_del_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Cannot delete '%s': %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @del_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @del_op(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @avpriv_io_delete(i8* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* @AV_LOG_ERROR, align 4
  %10 = load i8*, i8** %2, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @av_err2str(i32 %11)
  %13 = call i32 @av_log(i32* null, i32 %9, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @avpriv_io_delete(i8*) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i8*, i32) #1

declare dso_local i32 @av_err2str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
